build: 更新项目仓库地址并添加发布配置
- 修改 package.json 中

--- a/package.json
+++ b/package.json
@@ -50,6 +50,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zjydipingxian/zhongjiayao-fe-spec.git"
+    "url": "https://github.com/zjydipingxian/zhongjiayao-auto-cli.git"
+  },
+  "homepage": "https://github.com/zjydipingxian/zhongjiayao-auto-cli.git",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
